--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
     "next": "16.0.1",
     "next-auth": "^4.24.13",
     "prisma": "^6.19.0",
